--- a/Front-end/similaridade-ia/src/styles/global.css
+++ b/Front-end/similaridade-ia/src/styles/global.css
@@ -1,3 +1,229 @@
 @tailwind base;
-@tailwind utilities;
 @tailwind components;
+@tailwind utilities;
+
+blockquote,
+dl,
+dd,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hr,
+figure,
+p,
+pre {
+  margin: 0;
+}
+
+ol,
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+img,
+svg,
+video,
+canvas,
+audio,
+iframe,
+embed,
+object {
+  display: block;
+  vertical-align: middle;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: black;
+  font-size: inherit;
+  font-weight: inherit;
+  -webkit-font-smoothing: antialiased;
+}
+
+h1 {
+  @apply font-bold text-4xl my-4;
+}
+
+h2 {
+  @apply font-bold text-3xl my-4;
+}
+
+h3 {
+  @apply font-bold text-2xl my-4;
+}
+
+h4 {
+  @apply font-bold text-xl my-4;
+}
+
+p {
+  margin-bottom: 1rem;
+}
+
+input[type="checkbox"] {
+  appearance: none;
+  cursor: pointer;
+  border: 2px solid #ccc;
+  width: 18px;
+  height: 18px;
+  padding: 0px;
+  margin-right: 7px;
+  border-radius: 4px;
+}
+
+input[type="checkbox"]:checked {
+  border: 0px;
+  background-color: theme(colors.green.brasao2);
+  background-image: url(/src/assets/img/icon/check-white.svg);
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+body {
+  @apply bg-gray-100 text-gray-100;
+  color: black;
+  -webkit-font-smoothing: antialiased;
+  margin: 0;
+}
+
+section {
+  padding: 2rem 6rem 4rem 6rem;
+
+}
+
+.title-style-1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title-style-1 h1 {
+  text-transform: uppercase;
+  font-size: 64px;
+  margin: 1rem 0 0.2rem 0;
+  color: #283729;
+  display: inline-block;
+  position: relative;
+  padding: 1rem;
+  line-height: 3rem;
+  @apply text-center
+}
+
+.title-style-1 h1::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  height: 6px;
+  transform: translate(8%, 50%);
+  background-color: #283729;
+  width: 45%;
+}
+
+.title-style-1 h2 {
+  text-transform: uppercase;
+  font-weight: 400;
+  margin: 0;
+  color: #326335;
+  display: inline-block;
+  position: relative;
+  padding: 1rem;
+  padding-left: 2rem;
+  @apply text-center
+}
+
+.scroll-syles::-webkit-scrollbar {
+  width: 5px;
+}
+
+.scroll-syles::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.scroll-syles::-webkit-scrollbar-thumb {
+  background-color: theme(colors.gray.200);
+  border-radius: 20px;
+}
+
+body::-webkit-scrollbar {
+  width: 8px;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: theme(colors.gray.400);
+  border-radius: 20px;
+}
+
+input, textarea {
+  outline: none;
+}
+input, select {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  transition: .3s;
+  @apply rounded-md
+}
+
+input:focus, select:focus {
+  @apply border-green-900 bg-gray-100 shadow-sm
+}
+
+button {
+  @apply w-full bg-green-900 rounded-md text-white py-3 hover:bg-green-800 transition-all
+}
+
+
+@media screen and (max-width: 1440px) {
+  section {
+    padding: 1rem 6rem;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  section {
+    padding: 1rem 3rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  section {
+    padding: 1rem 3rem;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  section {
+    padding: 1rem 1.5rem;
+  }
+
+  .title-style-1 h1 {
+    font-size: 50px;
+  }
+
+  .title-style-1 h2 {
+    @apply text-base 
+  }
+
+}
+
+@media screen and (max-width: 390px) {
+  section {
+    padding: 1rem 1rem;
+  }
+}
