--- a/Front-end/similaridade-ia/src/styles/global.css
+++ b/Front-end/similaridade-ia/src/styles/global.css
@@ -182,7 +182,7 @@ input:focus, select:focus {
   @apply border-green-900 bg-gray-100 shadow-sm
 }
 
-button {
+button[type="submit"] {
   @apply w-full bg-green-900 rounded-md text-white py-3 hover:bg-green-800 transition-all
 }
 
