--- a/Front-end/similaridade-ia/src/styles/global.css
+++ b/Front-end/similaridade-ia/src/styles/global.css
@@ -183,7 +183,7 @@ input:focus, select:focus {
 }
 
 button[type="submit"] {
-  @apply w-full bg-green-900 rounded-md text-white py-3 hover:bg-green-800 transition-all
+  @apply w-36 bg-green-900 rounded-md text-white py-3 hover:bg-green-800 transition-all
 }
 
 td, th {
